# reglu-open

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.freeze.txt
configs/: ds_config.json  tofu_eval.yaml  tofu_finetune.yaml  tofu_forget.yaml  wmdp_eval.yaml  wmdp_forget.yaml
docs/: code-vs-paper.md  gpu-validation.md  method.md  migration-notes.md  state.md
docs/examples/: gpu-validation.example.yaml
scripts/: tofu_eval.sh  tofu_finetune.sh  tofu_forget.sh  validate_gpu_runs.py  wmdp_eval.sh  wmdp_forget.sh
src/reglu/: __init__.py  artifacts.py  cli.py  config.py  validation.py
src/reglu/eval/: runner.py  tofu.py  tofu_aggregate.py  wmdp.py
src/reglu/methods/: __init__.py
src/reglu/methods/reglu/: __init__.py  cache.py  core.py  rila.py
src/reglu/models/: __init__.py  registry.py
src/reglu/trainers/: __init__.py  common.py  finetune.py  unlearn.py
tests/: test_cli_smoke.py  test_config.py  test_finetune_save_layout.py  test_registry.py  test_rila_cache.py  test_tofu_aggregate.py  test_tofu_eval_layout.py  test_training_args.py  test_unlearn_eval_control.py  test_validation.py  test_wmdp_data.py  test_wmdp_eval.py
